...
          _navigateToScreen(context, index);
        },
        items: [
          _buildNavItem(
            context,
            icon: Icons.home,
            label: 'Home',
            isActive: navBarProvider.currentIndex == 0,
          ),
          _buildNavItem(
            context,
            icon: Icons.quiz_outlined,
            label: 'Quiz',
...
